# SabiTeX

./: .gitattributes  .gitignore  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
crates/sabitex-cli/: Cargo.toml
crates/sabitex-cli/src/: main.rs
crates/sabitex-core/: Cargo.toml
crates/sabitex-core/src/: align.rs  arith.rs  boxops.rs  cmdchr.rs  cmds.rs  cond.rs  control.rs  dvi.rs  engine.rs  eqtb.rs  error.rs  expand.rs  expr.rs  ext.rs  fmt.rs  fonts.rs  getnext.rs  hyph.rs  input.rs  io.rs  kanji.rs  lib.rs  linebreak.rs  math.rs  mathlist.rs  mem.rs  memword.rs  native.rs  nest.rs  nodes.rs  pack.rs  page.rs  par.rs  prefix.rs  print.rs  sa.rs  scan.rs  strings.rs  tokens.rs  toks.rs  (+2 more)
crates/sabitex-core/tests/: arith.rs  dvi_golden.rs  etex.rs  etrip.rs  expansion.rs  mem_arena.rs  print_scaled.rs  trip.rs
crates/sabitex-wasm/: Cargo.toml
crates/sabitex-wasm/src/: lib.rs
document/: building.md  cli.md  wasm.md
examples/: README.md
examples/hello/: hello.tex
examples/japanese/: japanese.tex
examples/math/: math.tex
examples/mixed/: mixed.tex
examples/wasm-node/: main.mjs
reference/: README.md
specification/: architecture.md  etrip.md  japanese.md  texweb-map.md  trip.md  xetex.md
