[package]
name = "sabitex-core"
description = "TeX engine core: a faithful Rust port of tex.web (with e-TeX / XeTeX / Japanese extensions planned)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustybuzz = { version = "0.20.1", optional = true }

[features]
shaping = ["dep:rustybuzz"]
# Intentionally empty: sabitex-core must stay dependency-free and wasm32-clean.
